set `cyclomatic_complexity_threshold` to "low"

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -8,6 +8,7 @@ name = "rust"
 
   [analyzers.meta]
   msrv = "stable"
+  cyclomatic_complexity_threshold = "low"
 
 [[transformers]]
 name = "rustfmt"
